<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_posts"
            android:icon="@drawable/icon_posts_blue"
            android:title="@string/posts" />-->
        <item
            android:id="@+id/nav_interview"
            android:icon="@drawable/icon_video_call_blue"
            android:title="@string/interviews" />
       <!-- <item
            android:id="@+id/nav_news"
            android:icon="@drawable/icon_news_blue"
            android:title="@string/news" />-->
        <item
            android:id="@+id/nav_thougts"
            android:icon="@drawable/icon_thought_bubble_blue"
            android:title="@string/thoughts" />
        <item
            android:id="@+id/nav_directory"
            android:icon="@drawable/icon_directory_blue"
            android:title="@string/directory" />
        <!--<item
            android:id="@+id/nav_savedarticles"
            android:icon="@drawable/icon_bookmark_blue"
            android:title="@string/savedarticles" />-->
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/icon_bookmark_blue"
            android:title="@string/termsconditions" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/lion_about_blue"
            android:title="@string/about" />

        <item
            android:id="@+id/action_check"
            android:title="Notification Settings"
            android:icon="@drawable/ic_notification_24dp"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/action_settings" />

    </group>


</menu>
