<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agora.openlive.ui.VideoPublishActivity">

    <hb.xvideoplayer.MxVideoPlayerWidget
        android:id="@+id/mpw_video_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mpw_video_player"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/publish_interview"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/publish"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/bpublish"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/register_button"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bcancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login"
            android:text="@string/no"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>